@@ -591,6 +591,7 @@
 		<Product type="0003" id="0002" name="ZMNHCA2 Flush Shutter" config="qubino/ZMNHCA2.xml"/>
                 <Product type="0003" id="0052" name="ZMNHCD Flush Shutter" config="qubino/ZMNHCD.xml"/>
 		<Product type="0004" id="0001" name="ZMNHJA2 Flush Dimmer Fil Pilote" config="qubino/ZMNHJA2.xml"/>
+		<Product type="0004" id="0051" name="ZMNHJD1 Flush Pilot Wire Dimmer" config="qubino/ZMNHJD1.xml"/>
 		<Product type="0005" id="0001" name="ZMNHIA2 Flush on/off thermostat" config="qubino/ZMNHIA2.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0130" name="Quby">
