@@ -1,0 +1,102 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+
+<!-- Qubino: ZMNHJD1 Flush Pilot Wire Dimmer -->
+
+	<!-- Configuration -->
+	<CommandClass id="112">
+		<Value type="list" genre="config" instance="1" index="1" label="Input 1 switch type" size="1" min="0" max="1" value="1">
+			<Help/>
+			<Item label="Push button" value="0"/>
+			<Item label="Toggle switch" value="1"/>
+		</Value> 
+
+		<Value type="list" genre="config" instance="1" index="2" label="Input 2 switch type" size="1" min="0" max="1" value="1">
+			<Help/>
+			<Item label="Push button" value="0"/>
+			<Item label="Toggle switch" value="1"/>
+		</Value> 
+
+		<Value type="list" genre="config" instance="1" index="3" label="Input 3 switch type" size="1" min="0" max="1" value="1">
+			<Help/>
+			<Item label="Push button" value="0"/>
+			<Item label="Toggle switch" value="1"/>
+		</Value> 	
+
+		<Value type="list" genre="config" instance="1" index="4" label="Input 1 contact type" size="1" min="0" max="1" value="0">
+			<Help/>
+			<Item label="Normally open" value="0"/>
+			<Item label="Normally closed" value="1"/>
+		</Value> 
+
+		<Value type="list" genre="config" instance="1" index="5" label="Input 2 contact type" size="1" min="0" max="1" value="0">
+			<Help/>
+			<Item label="Normally open" value="0"/>
+			<Item label="Normally closed" value="1"/>
+		</Value> 			
+
+		<Value type="list" genre="config" instance="1" index="6" label="Input 3 contact type" size="1" min="0" max="1" value="0">
+			<Help/>
+			<Item label="Normally open" value="0"/>
+			<Item label="Normally closed" value="1"/>
+		</Value>
+		
+		<Value type="list" genre="config" instance="1" index="11" label="Input 1 changes setpoint to" size="1" min="0" max="6" value="1">
+			<Help/>
+			<Item label="No change" value="0"/>
+			<Item label="Confort (heater setpoint)" value="1"/>
+			<Item label="Confort - 1°C" value="2"/>
+			<Item label="Confort - 2°C" value="3"/>		
+			<Item label="Confort - 3.5°C (Eco)" value="4"/>	
+			<Item label="No-frost (7°C)" value="5"/>	
+			<Item label="Off" value="6"/>				
+		</Value> 
+		
+		<Value type="list" genre="config" instance="1" index="12" label="Input 2 changes setpoint to" size="1" min="0" max="6" value="4">
+			<Help/>
+			<Item label="No change" value="0"/>
+			<Item label="Confort (heater setpoint)" value="1"/>
+			<Item label="Confort - 1°C" value="2"/>
+			<Item label="Confort - 2°C" value="3"/>		
+			<Item label="Confort - 3.5°C (Eco)" value="4"/>	
+			<Item label="No-frost (7°C)" value="5"/>	
+			<Item label="Off" value="6"/>				
+		</Value> 
+
+		<Value type="list" genre="config" instance="1" index="13" label="Input 3 changes setpoint to" size="1" min="0" max="6" value="5">
+			<Help/>
+			<Item label="No change" value="0"/>
+			<Item label="Confort (heater setpoint)" value="1"/>
+			<Item label="Confort - 1°C" value="2"/>
+			<Item label="Confort - 2°C" value="3"/>		
+			<Item label="Confort - 3.5°C (Eco)" value="4"/>	
+			<Item label="No-frost (7°C)" value="5"/>	
+			<Item label="Off" value="6"/>				
+		</Value> 			
+	
+		<Value type="list" genre="config" instance="1" index="30" label="Save state / restore after power failure" size="1" min="0" max="1" value="0">
+			<Help/>
+			<Item label="Yes" value="0" />
+			<Item label="No. Set heater to Off after power failure" value="1" />
+		</Value>
+	
+	</CommandClass>
+
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="5">
+			<Group index="1" max_associations="1" label="Default reporting" />
+			<Group index="2" max_associations="5" label="Multilevel state" auto="true"/>
+			<Group index="3" max_associations="5" label="Input I1 state" auto="true" />
+			<Group index="4" max_associations="5" label="Input I2 state" auto="true"/>	
+			<Group index="5" max_associations="5" label="Input I3 state" auto="true"/>					
+		</Associations>
+	</CommandClass>
+
+	<!-- Remove COMMAND_CLASS_BASIC -->
+	<CommandClass id="32" action="remove" />
+
+	<!-- Map endpoints to instances -->
+	<CommandClass id="96" mapping="endpoints" />
+
+</Product>
